--- a/Jenkins/jenkinsfile
+++ b/Jenkins/jenkinsfile
@@ -1,21 +1,29 @@
-pipeline { 
-agent any 
-    stages { 
-        stage ('Build') { 
-            sh 'echo Added build from Narendra'
+pipeline {
+    agent any
+    stages {
+        stage("Clean Up"){
+            steps {
+                deleteDir()
+            }
         }
-        stage ('Test') { 
-        
+        stage("Clone Repo"){
+            steps {
+                sh "git clone https://github.com/jenkins-docs/simple-java-maven-app.git"
+            }
         }
-        stage ('QA') { 
-        
+        stage("Build"){
+            steps {
+                dir("simple-java-maven-app") {
+                    sh "mvn clean install"
+                }
+            }
         }
-        stage ('Deploy') { 
-        
+        stage("Test"){
+            steps {
+                dir("simple-java-maven-app") {
+                    sh "mvn test"
+                }
+            }
         }
-        stage ('Monitor') { 
- 
-        }
- 
-    }           
- }
+    }
+}
