--- a/Jenkins/jenkinsfile
+++ b/Jenkins/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         }
         stage("Test"){
             steps {
-                dir("simple-java-maven-app") {
+                dir("MovieCatalogService") {
                     sh "mvn test"
                 }
             }
